remove unused tests from technical documentation

--- a/technical-documentation/index.html
+++ b/technical-documentation/index.html
@@ -2,13 +2,12 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Technical Documentation</title>
+  <title>Technical Documentation</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
 <nav id="navbar">
   <header>C++ Lambda Expressions</header>
@@ -165,7 +164,6 @@
   </section>
 </main>
 <!-- partial -->
-  <script  src="./script.js"></script>
 
 </body>
 </html>
